--- a/Memory/Memory/Properties/Resources.resx
+++ b/Memory/Memory/Properties/Resources.resx
@@ -118,7 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Kartenrücken - Kopie" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Bild1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bild1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bild2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bild2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bild3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bild3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bild4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bild4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bild5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bild5.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Kartenrücken___Kopie" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Kartenrücken - Kopie.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
